Fix critical SonarQube: constant 'Candidat #' and replace collect(toList()) with toList()